--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /PROGRAMACION BASICA/HolaMundo/target/
 /PROGRAMACION BASICA/TeoriaBase/target/
+/PROGRAMACION BASICA/co.edu.udea.udea_ruta2_ciclo2/nbproject/private/
+/PROGRAMACION BASICA/co.edu.udea.udea_ruta2_ciclo2/dist/
+/PROGRAMACION BASICA/co.edu.udea.udea_ruta2_ciclo2/build/
