--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /PROGRAMACION BASICA/co.edu.udea.udea_ruta2_ciclo2/nbproject/private/
 /PROGRAMACION BASICA/co.edu.udea.udea_ruta2_ciclo2/dist/
 /PROGRAMACION BASICA/co.edu.udea.udea_ruta2_ciclo2/build/
+/PROGRAMACION BASICA/Junit/target/
