--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /PROGRAMACION BASICA/co.edu.udea.udea_ruta2_ciclo2/dist/
 /PROGRAMACION BASICA/co.edu.udea.udea_ruta2_ciclo2/build/
 /PROGRAMACION BASICA/Junit/target/
+/PROGRAMACION BASICA/Test/target/
