--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /PROGRAMACION BASICA/co.edu.udea.udea_ruta2_ciclo2/build/
 /PROGRAMACION BASICA/Junit/target/
 /PROGRAMACION BASICA/Test/target/
+/PROGRAMACION BASICA/JavaApplication1/nbproject/private/
+/PROGRAMACION BASICA/JavaLibrary1/nbproject/private/
