--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /PROGRAMACION BASICA/Test/target/
 /PROGRAMACION BASICA/JavaApplication1/nbproject/private/
 /PROGRAMACION BASICA/JavaLibrary1/nbproject/private/
+/TATA/TATA/target/
