--- a/DESARROLLO SOFTWARE/.vscode/settings.json
+++ b/DESARROLLO SOFTWARE/.vscode/settings.json
@@ -1,8 +1,15 @@
 {
     "cSpell.words": [
         "boton",
+        "botonnuevaventa",
+        "botonnuevovendedor",
+        "celular",
         "contenedor",
+        "especialidad",
+        "fechaingreso",
+        "formulario",
         "imagen",
+        "nombre",
         "subtitulo",
         "textos",
         "titulo"
